--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,22 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="This is an example of CI/CD pipeline">
     <title>Document</title>
+    <style>
+        #name{
+            width:200px;
+            height:50px;
+        }
+        #age{
+            width:200px;
+            height:50px;
+        }
+        #email{
+            width:200px;
+            height:50px;
+        }
+    </style>
 </head>
 <body>
     <h2>CI/CD Demo</h2>
