--- a/src/index.html
+++ b/src/index.html
@@ -9,21 +9,27 @@
     <style>
         #name{
             width:200px;
-            height:50px;
+            height:35px;
         }
         #age{
             width:200px;
-            height:50px;
+            height:35px;
         }
         #email{
             width:200px;
-            height:50px;
+            height:35px;
+        }
+        #submit{
+            padding:10px;
+        }
+        label{
+            font-size:30px;
         }
     </style>
 </head>
 <body>
-    <h2>CI/CD Demo</h2>
-    <h3>Create your profile</h3>
+    <h1>CI/CD Demo</h1>
+    <h1>Create your profile</h1>
 
     <label for="name">Name</label>
     <input type="text" name="name" id="name" />
@@ -36,6 +42,6 @@
 
     <input type="button" value="Create" id="submit">
 
-    <h2 id="result"></h2>
+    <h1 id="result"></h1>
 </body>
 </html>
